maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:40: error: not found: value dir1
    dir1
    ^IslandMaze:42: error: not found: value dir2
      dir2
      ^IslandMaze:45: error: not found: value dir2
      else dir2
           ^