maze.island.IslandMaze.scala.code
override def run() {
  etat(0)
  
  def etat(e:Int) {
    e match {
      case 0 => nord()
      case 1 => suivreMur()
    }
  }
  
  def suivreMur() {
    while(!estSurBiscuit())
      conditionSuivreMur(true)
    prendBiscuit()
  }
  
  def nord() {
    setDirection(Direction.NORTH)
    while(getY() != 0) {
      if(getDirection == Direction.NORTH && !estFaceMur())
      	avance()
      else {
        if(getDirection == Direction.EAST)
          conditionSuivreMur(false)
        else conditionSuivreMur(true)
      }
    }
    etat(1)
  }
  
  def conditionSuivreMur(droiteTrue:Boolean) {
    if(droiteTrue) {
    	var dir1 = droite()
    	var dir2 = gauche()
    } else {
      var dir1 = gauche()
    	var dir2 = droite()
    }
    dir1
    if(estFaceMur()) {
      dir2
      if(!estFaceMur())
      	avance()
      else dir2
    } else avance()
  }
}